# museum-population-analysis

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  implementation.md  pyproject.toml
config/: city_overrides.yaml
museums/: __init__.py  config.py
museums/db/: session.py
museums/ingestion/: population.py  wikipedia.py
museums/ml/: regression.py
museums/models/: schema.py
museums/pipeline/: __main__.py  etl.py
notebooks/: analysis.ipynb
tests/: conftest.py
tests/ingestion/: test_population.py  test_wikipedia.py
tests/ml/: test_regression.py
tests/pipeline/: test_etl.py
