[build-system]
requires = ["setuptools>=74", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ivado-museums"
version = "0.1.0"
description = "Museum visitor and city population database with linear regression analysis"
requires-python = ">=3.13"  # 3.14 is the installed runtime; >=3.13 ensures all wheels resolve
dependencies = [
    "httpx>=0.27",
    "mwparserfromhell>=0.6",
    "psycopg[binary]>=3.2",
    "sqlalchemy[mypy]>=2.0",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "pandas>=2.2",
    "numpy>=2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "pandas-stubs>=2.2",
    "types-requests>=2.32",
]
notebook = [
    "jupyterlab>=4.3",
    "ipykernel>=6.29",
    "seaborn>=0.13",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["museums*"]

# --- ruff ---
[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["museums"]

# --- mypy ---
[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
